[metadata]
name = moveit_franka
summary = A python library for Franka Panda to use moveit!
description_file =
    README.md
author = Larry Lu
author_email = larrylu0426@gmail.com
python_requires = >=3.8
classifier =
    Environment :: ROS2
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[files]
packages = moveit_franka